clusters/docker-desktop/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-backend
  namespace: rails-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-backend
  template:
    metadata:
      labels:
        app: rails-backend
    spec:
      containers:
        - name: rails-backend
          image: harshparmar009/rails-task-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: rails-backend
  namespace: rails-task
spec:
  selector:
    app: rails-backend
  ports:
    - port: 80
      targetPort: 80
