clusters/docker-desktop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-task-ingress
  namespace: rails-task
spec:
  ingressClassName: nginx

  rules:
    - host: task-manager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails-frontend
                port:
                  number: 80
